--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/tailwind": "^5.1.1",
+    "@astrolib/seo": "^1.0.0-beta.6",
     "astro": "^4.15.8",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
