--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.1",
     "@astrolib/seo": "^1.0.0-beta.6",
     "astro": "^4.15.8",
+    "astro-icon": "^1.1.1",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
