Create Counter Solid JS component using persistence (astro islands)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
       "@layouts/*": [
         "./src/layouts/*"
       ]
-    }
+    },
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js"
   }
 }
