--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/solid-js": "^4.4.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astrolib/seo": "^1.0.0-beta.6",
     "astro": "^4.15.8",
     "astro-icon": "^1.1.1",
+    "solid-js": "^1.8.22",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
